--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,5 @@
   border-color: #2196F3;
   margin-top: 10px;
 }
+
+@media screen and (max-width:767px) { .fc-toolbar.fc-header-toolbar {font-size: 90%; display:flex; flex-direction:column; gap: 8px }}
